bluegreen/blue_svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: blue
  name: blue
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue
    deploymentconfig: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
