bluegreen/green_svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: green
  name: green
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: green
    deploymentconfig: green
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
